<resources>
    <string name="app_name">Three-In-One</string>
    <string name="news_reader_app_name">News Reader</string>
    <string name="movies_app_name">Movies</string>
    <string name="bus_app_name">Bus Route App</string>



    <string name="news_txt1">News Details 1</string>
    <string name="news_txt2">News Details 2</string>
    <string name="news_txt3">News Details 3</string>
    <string name="news_txt4">News Details 4</string>
    <string name="news_txt5">News Details 5</string>
    <string name="news_txt6">News Details 6</string>
    <string name="news_txt7">News Details 7</string>
    <string name="news_btn_save">Save</string>
    <string name="news_about_txt">Author: Danilo Tiburcio Murta</string>
    <string name="news_version_txt">Version: 1.0</string>

    <string name="news_txt_list">News</string>

    <string name="news_activity_name">News Reader</string>
    <string name="news_search_bar">Search</string>
    <string name="news_btn_search">Search</string>
    <string name="news_btn_bookmark">Add to Favourites</string>
    <string name="news_hint_search">search</string>
    <string name="news_title">News</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="movie_activity_name">Movie Database</string>
    <string name="movie_title">Title</string>
    <string name="movie_year">Year</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_runtime">Runtime</string>
    <string name="movie_actors">Actors</string>
    <string name="movie_plot">Plot</string>
    <string name="movie_poster_url">URL</string>
    <string name="add_btn">Add To Favorites</string>

    <string name="bus_activity_name">The Bus Schedule</string>
    <string name="movie_delete">DELETE</string>
    <string name="movie_search">Search</string>
    <string name="movie_favoritesBtn">Favorites</string>
    <string name="movie_statsBtn">Statistics</string>
    <string name="movie_error">Not Found</string>

    <string name="toolbar_choose">Choose An Activity</string>

    <string name="favourite_foods">Favourite Foods</string>
    <string name="food_search">Search</string>
    <string name="food_search_item">Search for any food item...</string>
    <string name="add_to_fav_food">Add to Favourites</string>
    <string name="go_to_favs_food">Go to Favourites</string>



    <string name="bus_destination">Bus Destination</string>
    <string name="bus_latitude">Bus Latitude</string>
    <string name="bus_longitude">Bus Longitude</string>
    <string name="bus_gps_speed">Bus GPS Speed</string>
    <string name="bus_start_time">Bus Start Time</string>
    <string name="adjusted_schedule_time">Bus Adjusted Schedule Time</string>
    <string name="bus_add_to_favourites_button">Add To Favourites</string>
    <string name="bus_stop_not_found">Bus Stop Not Found</string>
    <string name="gettingResults">Getting Results</string>
    <string name="DeletedFromBusFavourites">Deleted From Favourites</string>
    <string name="DeleteAreYouSure">Are you sure you want to delete this from favorites?</string>
    <string name="SearchHint">Search</string>
    <string name="AdjTime">Adjusted Time</string>
    <string name="GPSPos">GPS Position</string>
    <string name="Speed">Speed</string>
    <string name="StartTime">Start Time</string>
    <string name="noBussesAvailable">No Busses Available</string>
    <string name="adjSchedLabel">Average Adjusted Schedule Time</string>






    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="food_activity_name">Nutrition Database</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
