<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BusDetailsActivity" android:orientation="vertical">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/bus_destination"
              android:id="@+id/destinationText"

    />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/latText"
              android:text="@string/bus_latitude"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/longText"
              android:text="@string/bus_longitude"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/gpsText"
              android:text="@string/bus_gps_speed"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/startTimeText"
              android:text="@string/bus_start_time"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/scheduleText"
              android:text="@string/adjusted_schedule_time"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/favouritesButton"
            android:text="@string/bus_add_to_favourites_button"/>
</LinearLayout>