<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MoviesDetailsActivity" android:orientation="vertical">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/moviePoster"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movie_title"

              android:id="@+id/movieTitle"></TextView>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movie_year"
              android:id="@+id/movieYear"></TextView>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movie_rating"
              android:id="@+id/movieRating"></TextView>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movie_runtime"
              android:id="@+id/movieRuntime"></TextView>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movie_actors"
              android:id="@+id/movieActors"></TextView>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/movie_plot"
              android:id="@+id/movieDesc"></TextView>

    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"

               android:id="@+id/moviePosterURL"></ImageView>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_btn"
            android:id="@+id/addBtn" android:textColorLink="@android:color/background_light"
            android:textColor="@android:color/background_light" android:background="@color/lightred">

    </Button>

</LinearLayout>