<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ChooseActivity">


    <TextView
            android:text="@string/app_name"
            android:textSize="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>
    <TextView
            android:text="Pick an App: "
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
    <Button
            android:text="@string/news_reader_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button3"/>
    <Button
            android:text="@string/movies_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button4"/>
    <Button
            android:text="@string/bus_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button5"/>
</LinearLayout>