<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodListActivity"
>

    <android.support.v7.widget.Toolbar
            android:id="@+id/TheToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple"
            app:titleTextColor="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <android.support.v4.widget.DrawerLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/TheToolbar"
            android:id="@+id/bus_drawer_layout">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:id="@+id/container"
                  android:layout_height="match_parent"
                  android:layout_alignBottom="@+id/typeSearch"
                  android:layout_marginBottom="-459dp"></LinearLayout>

        <RelativeLayout android:layout_height="match_parent"
                        android:layout_width="wrap_content"

        >
            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/typeSearch"
                         android:id="@+id/foodListContainer"></FrameLayout>
            <EditText android:layout_width="297dp"
                      android:layout_height="wrap_content"
                      android:id="@+id/typeSearch"
                      android:layout_toLeftOf="@+id/pressSearch"
                      android:hint="@string/food_search_item" android:layout_marginRight="-1dp"
                      android:layout_alignBottom="@+id/pressSearch" android:layout_marginBottom="-3dp"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressSearch"
                    android:text="@string/food_search"
                    android:layout_alignParentEnd="true" android:layout_marginTop="0dp" android:layout_alignParentTop="true"
                    android:layout_marginEnd="0dp" android:textSize="14sp"/>

            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:id="@+id/progressBar" android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp" android:visibility="invisible" android:layout_marginTop="0dp"
                    android:layout_alignParentTop="true"
                    android:min="0"
                    android:max="100"/>
            <Button
                    android:text="@string/add_to_fav_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"

                    android:layout_above="@+id/goToFavs"
                    android:id="@+id/favourites"/>
            <Button
                    android:text="@string/go_to_favs_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/goToFavs"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="-2dp"/>=
        </RelativeLayout>


        <android.support.design.widget.NavigationView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:headerLayout="@layout/nav_header"
                android:id="@+id/bus_navigation_view"
                android:fitsSystemWindows="true"
                android:layout_gravity="start"
                app:menu="@menu/nav_menu"
        >
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>


</RelativeLayout>