<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >

    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            card_view:cardElevation="10dp"
            android:layout_height="180dp"
            android:id="@+id/cardView"
            android:layout_margin="15dp"
    >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/bus_destination"
                      android:textSize="30dp"
                      android:layout_marginTop="10dp"
                      android:id="@+id/destinationText"
                      android:layout_marginBottom="3dp"
                      android:layout_marginStart="10dp"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_below="@id/destinationText"
                          android:layout_marginTop="10dp"
                          android:layout_marginStart="10dp"
                          android:layout_marginEnd="10dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Adjusted Time"
                          android:layout_marginBottom="3dp"
                          android:id="@+id/timeView"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="GPS Position"
                          android:layout_below="@id/timeView"
                          android:layout_marginBottom="3dp"
                          android:id="@+id/posView"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Speed"
                          android:layout_marginBottom="3dp"
                          android:layout_below="@id/posView"
                          android:id="@+id/speedView"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Start Time"
                          android:layout_below="@id/speedView"
                          android:id="@+id/startView"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_below="@id/destinationText"
                          android:layout_marginTop="10dp"
                          android:layout_marginStart="100dp"
                          android:layout_marginEnd="10dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/scheduleText"
                          android:layout_toRightOf="@id/timeView"
                          android:layout_below="@id/destinationText"
                          android:text="@string/adjusted_schedule_time"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_toRightOf="@id/posView"
                          android:layout_below="@id/scheduleText"
                          android:id="@+id/position"
                          android:text="@string/bus_latitude"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/gpsText"
                          android:layout_below="@id/position"
                          android:layout_toRightOf="@id/speedView"
                          android:text="@string/bus_gps_speed"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/startTimeText"
                          android:text="@string/bus_start_time"
                          android:layout_below="@id/speedView"
                          android:layout_toRightOf="@id/startView"
                          android:layout_marginBottom="3dp"
                          android:layout_marginStart="10dp"/>

            </LinearLayout>
        </RelativeLayout>

        <!--<RelativeLayout android:layout_width="match_parent"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:orientation="vertical"-->
                      <!--android:layout_marginTop="10dp"-->
                      <!--android:layout_marginStart="10dp"-->
                      <!--android:layout_marginEnd="10dp">-->

            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:text="Destination"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:id="@+id/destView"/>-->
            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:text="@string/bus_destination"-->
                      <!--android:layout_toRightOf="@id/destView"-->
                      <!--android:id="@+id/destinationText"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_marginStart="10dp"/>-->

            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:text="Adjusted Time"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_below="@id/destView"-->
                      <!--android:id="@+id/timeView"/>-->
            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:id="@+id/scheduleText"-->
                      <!--android:layout_toRightOf="@id/timeView"-->
                      <!--android:layout_below="@id/destinationText"-->
                      <!--android:text="@string/adjusted_schedule_time"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_marginStart="10dp"/>-->

            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:text="GPS Position"-->
                      <!--android:layout_below="@id/timeView"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:id="@+id/posView"/>-->
            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:layout_toRightOf="@id/posView"-->
                      <!--android:layout_below="@id/scheduleText"-->
                      <!--android:id="@+id/position"-->
                      <!--android:text="@string/bus_latitude"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_marginStart="10dp"/>-->

            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:text="Speed"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_below="@id/posView"-->
                      <!--android:id="@+id/speedView"/>-->
            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:id="@+id/gpsText"-->
                      <!--android:layout_below="@id/position"-->
                      <!--android:layout_toRightOf="@id/speedView"-->
                      <!--android:text="@string/bus_gps_speed"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_marginStart="10dp"/>-->

            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:text="Start Time"-->
                      <!--android:layout_below="@id/speedView"-->
                      <!--android:id="@+id/startView"/>-->
            <!--<TextView android:layout_width="wrap_content"-->
                      <!--android:layout_height="wrap_content"-->
                      <!--android:id="@+id/startTimeText"-->
                      <!--android:text="@string/bus_start_time"-->
                      <!--android:layout_below="@id/speedView"-->
                      <!--android:layout_toRightOf="@id/startView"-->
                      <!--android:layout_marginBottom="3dp"-->
                      <!--android:layout_marginStart="10dp"/>-->

        <!--</RelativeLayout>-->

    </android.support.v7.widget.CardView>

</RelativeLayout>